Add skeleton pages and investigating a dark theme.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,13 @@
+html[data-theme='dark'] {
+    --bg: #333;
+    --bg-secondary: #444;
+    --headings: #39f;
+    --text: #bbb;
+}
 body {
     margin: 60px auto;
     width: 70%;
+    background-color: #333;    
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -26,7 +33,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: #bbb;
 }
 footer {
     border-top: 1px solid #d5d5d5;
