--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #39f;
 }
 p {
     font-size: 1.5em;
