--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #939;
 }
+h2 {
+    font-size: 2em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #a4a;
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
