--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,9 @@ h1 {
     color: #939;
 }
 h2 {
-    font-size: 2em;
+    font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    color: #a4a;
+    color: #939;
 }
 p {
     font-size: 1.5em;
