Air Hockey Arcade Blog Post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,3 +7,7 @@ layout: default
 <div class="post">
   {{ content }}
 </div>
+
+<!--{% if page.youtubeId %} -->
+	{% include youtubePlayer.html id=page.youtubeId %}
+<!--{% endif %}-->
