--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,20 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 
+/* Three image containers (use 33.33% for 3, use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 a {
     text-decoration: none;
     color: #999;
